--- a/weather app.html
+++ b/weather app.html
@@ -107,7 +107,7 @@ main{
 
 </head>
 <body>
-    <h1>Sachin Sangwan</h1>
+    <h1>My weather app</h1>
     <div class = "aap-wrap">
         <header>
             <input type = "text" autocomplete = "off" class = "search-box" placeholder = "Search for a city...">
