--- a/Todo app.html
+++ b/Todo app.html
@@ -98,6 +98,7 @@ body{
 }
 
 .list{
+    margin-top    : 7px;
     width         : 100%;
     height        : 60%;
     padding       : 10px 10px 10px 10px;
