--- a/Todo app.html
+++ b/Todo app.html
@@ -37,8 +37,7 @@ body{
     flex-direction  : column;
     overflow        : hidden;
     cursor          : auto;
-    background-image: url(https://i.pinimg.com/originals/a1/8b/d3/a18bd3c3fd742813e7d1dcf8e8788858.jpg);
-    background-size : cover;
+    background-color : white;
     transition      : .8s ease-in;
 }
 
