--- a/Image enhancer.html
+++ b/Image enhancer.html
@@ -18,7 +18,7 @@
     <input id  = "base" type = "color" name = "base" value = "#ffc600">
   </div>
 
-  <img src = "https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src = "https://source.unsplash.com/7bwQXzbF6KE/800x500"><br>
   <img src="https://www.itl.cat/pngfile/big/207-2077706_cgi-angry-birds-angry-birds-1080p-hd-wallpaper.jpg" width="50%" height="300px">
 
   <style>
