--- a/Daily routine.html
+++ b/Daily routine.html
@@ -5,6 +5,29 @@
     <meta name    = "viewport" content = "width=device-width, initial-scale=1.0">
     <link rel     = "stylesheet" href  = "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity = "sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin = "anonymous">
     <title>Daily Routine</title>
+
+    <style>
+        body{
+            background-image: url(https://wallpapersite.com/images/pages/pic_h/4172.jpg);
+            background-size : cover;
+        }
+
+
+        .card{
+            background-color: black;
+        }
+        
+
+        .title{
+            color: white;
+        }
+
+        .btn{
+            background-color: sandybrown;
+        }
+    </style>
+
+
 </head>
 <body>
     <header id    = "main-header" class = "bg-dark text-white p-4 mb-3">
@@ -21,10 +44,10 @@
     </header>
     <div   class = "container">
     <div   id    = "main" class    = "card card-body">
-    <div   class = "title">My Routine</div>
+    <div   class = "title">My Routine</div><br>
     <form  id    = "addForm" class = "form-inline mb-3">
     <input type  = "text" onfocus  = "this.value=''" class = "form-control mr-2" id = "item" />
-    <input type  = "submit" value  = "Submit" class        = "btn btn-dark" />
+    <input type  = "submit" value  = "Submit" class        = "btn " />
             </form>
             <h2 class = "title">Routines</h2>
             <ul id    = "items" class                                         = "list-group">
