--- a/assignment 5/index.html
+++ b/assignment 5/index.html
@@ -85,17 +85,17 @@
         </section>
         <section id="address" class="col-sm-4">
           <span>Address:</span><br>
-          7105 Reisterstown Road<br>
-          Baltimore, MD 21215
-          <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+          Tilak nagar<br>
+          Bikaner 334001
+          <p>* Delivery area within 3-4 miles, with minimum order of 100rs plus 20rs charge for all deliveries.</p>
           <hr class="visible-xs">
         </section>
         <section id="testimonials" class="col-sm-4">
-          <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
+          <p>"The best Indian restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
           <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright David Chu's China Bistro 2016</div>
+      <div class="text-center">&copy; Copyright Shenoo Sangwan Restraunt 2020</div>
     </div>
   </footer>
 
